hphp/hack/test/typecheck/xhp_attr_spread_localize.php.like_types.exp
File "xhp_attr_spread_localize.php", line 21, characters 12-13:
Invalid xhp value for attribute :my-foo in :bar (Typing[4110])
File "xhp_attr_spread_localize.php", line 11, characters 13-16:
Expected :foo
File "xhp_attr_spread_localize.php", line 7, characters 13-16:
But got dynamic because it is an unenforceable type
